--- a/index.html
+++ b/index.html
@@ -1,41 +1,101 @@
 <!DOCTYPE html>
-<html lang="en-us">
-  <head>
+<html>
+<head>
     <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity Web Player | Sentis demo</title>
-  </head>
-  <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <canvas id="unity-canvas" width=1920 height=1080 tabindex="-1" style="width: 1920px; height: 1080px; background: #231F20"></canvas>
-    <script src="Build/isdin2.loader.js"></script>
+    <meta name="viewport" content='width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0, user-scalable=no, shrink-to-fit=yes'>
+    <title>Unity WebGL Player | Demo</title>
+    <link rel="stylesheet" href="TemplateData/style.css">
+    <style>
+        html{
+            height: -webkit-fill-available;
+        }
+        body {
+            margin: 0;
+            padding: 0;
+            min-height: 100vh;
+            min-height: -webkit-fill-available;
+            width: 100vw;
+            overflow: hidden;
+        }
+        .ctaDiv {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+            inset: 0;
+            background: rgba(255, 255, 255, 0.1);
+            z-index: 99;
+        }
+    </style>
+</head>
+<body>
+    <!--IMAGETARGETS-->
+		<imagetarget id='fusionwater' src='targets/fusionwater2.jpg'></imagetarget>
+		<imagetarget id='magicglow' src='targets/magicglow2.png'></imagetarget>
+		<imagetarget id='retinal' src='targets/retinal.png'></imagetarget>
+
+    <video id="webcam-video" muted autoplay playsinline style="width:1px;position:absolute"></video>
+    <!-- <video id="webcam-video" muted autoplay playsinline style="width:100%; height:100%; object-fit:cover; position:absolute"></video> -->
+    <canvas id="video-canvas" style="width:100%; height:100%; object-fit:cover; position:absolute"></canvas>
+    <div id="errorDiv" class="ctaDiv" style="display: none; background:#aaa">
+        <p id="errorText" style="text-align: center; width:60vw; color:white"></p>
+    </div>
+    <div id="unity-container" class="unity-mobile">
+        <canvas id="unity-canvas" style="width: 100%; height: 100%; background: #0000; z-index: -99"></canvas>
+        <div id="unity-loading-bar">
+            <div id="unity-logo"></div>
+            <p id="unity-progress">0%</p>
+            <div id="unity-progress-bar-empty">
+                <div id="unity-progress-bar-full"></div>
+            </div>
+        </div>
+        <canvas id="video-canvas"></canvas>
+    </div>
+    <script src="Build/demo.loader.js"></script>
     <script>
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
-
-        var canvas = document.querySelector("#unity-canvas");
-        canvas.style.width = "100%";
-        canvas.style.height = "100%";
-        canvas.style.position = "fixed";
-
-        document.body.style.textAlign = "left";
-      }
-
-      createUnityInstance(document.querySelector("#unity-canvas"), {
-        arguments: [],
-        dataUrl: "Build/isdin2.data.unityweb",
-        frameworkUrl: "Build/isdin2.framework.js.unityweb",
-        codeUrl: "Build/isdin2.wasm.unityweb",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "AngelGamo",
-        productName: "Sentis demo",
-        productVersion: "0.1.0",
-        // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
-        // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
-      });
+            var container = document.querySelector("#unity-container");
+            var canvas = document.querySelector("#unity-canvas");
+            var loadingBar = document.querySelector("#unity-loading-bar");
+            var progressText = document.querySelector('#unity-progress');
+            var progressBarFull = document.querySelector("#unity-progress-bar-full");
+            
+            canvas.style.width = window.innerWidth + "px";
+            canvas.style.height = window.innerHeight + "px";
+            
+            createUnityInstance(document.querySelector("#unity-canvas"), {
+                dataUrl: "Build/demo.data.unityweb",
+                frameworkUrl: "Build/demo.framework.js.unityweb",
+                codeUrl: "Build/demo.wasm.unityweb",
+                streamingAssetsUrl: "StreamingAssets",
+                companyName: "ArIsdin",
+                productName: "Demo",
+                productVersion: "0.4.0",
+                //webglContextAttributes: { "preserveDrawingBuffer": true },
+                // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
+                // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
+                },
+                (progress) => {
+                    progressText.innerHTML = parseInt(100 * progress) + '%';
+                    progressBarFull.style.width = 100 * progress + "%";
+                }
+            ).then((unityInstance) => {
+                window.unityInstance = unityInstance;
+                loadingBar.style.display = "none";
+            });
+            loadingBar.style.display = "block";
+            //Set Facing Mode here ('environment', 'user', '')
+		window.unityFacingMode = "environment"
+            window.WEBCAM_SETTINGS = {
+                video: {
+                    facingMode: unityFacingMode,
+                },
+                audio: false
+            };
+            function ShowError(error){
+                document.getElementById("errorDiv").style.display = "flex";
+                document.getElementById("errorText").innerHTML = error;
+            }          
     </script>
-  </body>
+</body>
 </html>
