--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <canvas id="video-canvas"></canvas>
     </div>
-    <script src="Build/ARIsdin.loader.js"></script>
+    <script src="Build/IsdinAR.loader.js"></script>
     <script>
             var container = document.querySelector("#unity-container");
             var canvas = document.querySelector("#unity-canvas");
@@ -64,9 +64,9 @@
             canvas.style.height = window.innerHeight + "px";
             
             createUnityInstance(document.querySelector("#unity-canvas"), {
-                dataUrl: "Build/ARIsdin.data.unityweb",
-                frameworkUrl: "Build/ARIsdin.framework.js.unityweb",
-                codeUrl: "Build/ARIsdin.wasm.unityweb",
+                dataUrl: "Build/IsdinAR.data.unityweb",
+                frameworkUrl: "Build/IsdinAR.framework.js.unityweb",
+                codeUrl: "Build/IsdinAR.wasm.unityweb",
                 streamingAssetsUrl: "StreamingAssets",
                 companyName: "Metaspai",
                 productName: "ARisdin",
